src/objects/Property_Rent__c.object
<CustomObject>
    <fields>
        <fullName>Annual_Rent__c</fullName>
        <inlineHelpText>Amount in Pounds and Pence</inlineHelpText>
        <label>Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Quarter_Month__c</fullName>
        <label>First Quarter Month</label>
        <picklist>
            <controllingField>Payment_Frequency__c</controllingField>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter - Usual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarter - First Day of Month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly - First Day of Month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Property_Contract__c</fullName>
        <label>Property Contract</label>
        <referenceTo>Property_Contract__c</referenceTo>
        <relationshipLabel>Property Rents</relationshipLabel>
        <relationshipName>Property_Rents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rent_Description__c</fullName>
        <label>Rent Description</label>
        <picklist>
            <picklistValues>
                <fullName>Initial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Holdover</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rent_End_Date__c</fullName>
        <label>Rent End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rent_Start_Date__c</fullName>
        <label>Rent Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>VAT_Payable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VAT Payable</label>
        <type>Checkbox</type>
    </fields>
    <label>Property Rent</label>
    <nameField>
        <displayFormat>PRID-{00}</displayFormat>
        <label>Rent ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Rents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rent_End_date_after_Rent_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Rent_Start_Date__c  &gt; Rent_End_Date__c</errorConditionFormula>
        <errorDisplayField>Rent_Start_Date__c</errorDisplayField>
        <errorMessage>Rent Start Date can&apos;t be before Rent End Date</errorMessage>
    </validationRules>
</CustomObject>